--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java-library'
 }
 
+version = '0.1.0'
+
 dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
 
@@ -12,4 +14,11 @@ dependencies {
 
 repositories {
     jcenter()
+}
+
+jar {
+    manifest {
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version)
+    }
 }
